--- a/force-app/main/default/lwc/bMICALCULATOR/bMICALCULATOR.html
+++ b/force-app/main/default/lwc/bMICALCULATOR/bMICALCULATOR.html
@@ -14,9 +14,10 @@
                 <h3>under 18.5 to 24.9</h3>
                 <P>you have healthy weight range for young and middle-age adults </P>
                 <h3>25.0 to 29.9</h3>
-                <p>you are over weight</p>
+                <p>you are over weight.</p>
                 <h3>over30</h3>
-                    <p>your obese</p>
+                    <p>your obese.</p>
+                    
                 
             </div>
         </div>
