before going live

--- a/force-app/main/default/lwc/bMICALCULATOR/bMICALCULATOR.html
+++ b/force-app/main/default/lwc/bMICALCULATOR/bMICALCULATOR.html
@@ -5,6 +5,14 @@
             <h1>
                 BMI calculator
             </h1>
+
+            <section>
+                <h2>your bmi value </h2>
+                <div class="result-value">here value will come</div>
+                <h2>so you are</h2>
+                <div class="result-value">results will come here</div>
+                <button class="slds-button slds-button_neutral slds-button_stretch  custom-button slds-var-m-bottom_large" onclick={recalculate}>re-calculate</button>
+            </section>
             <form  onsubmit= {submithandler}> 
                 
                 <div class="slds-form-element slds-var-bottom_medium">
